--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- font awesome link for icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -9,11 +10,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- header icon link -->
     <link rel="shortcut icon" href="/assets/favicon.webp" />
     <link rel="stylesheet" href="index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>first task</title>
   </head>
+
   <body>
     <!-- navbar section -->
     <div class="main-nav">
@@ -43,6 +46,7 @@
     </div>
 
     <!-- how it works section -->
+
     <br /><br /><br />
 
     <div class="main-how">
@@ -50,7 +54,9 @@
       <p>Stremline your outreach process in 4 easy steps.</p>
     </div>
     <br /><br /><br />
+
     <!-- template section -->
+
     <div class="template">
       <div class="template-content">
         <img
@@ -71,6 +77,7 @@
       <div class="clearfix"></div>
     </div>
     <br /><br /><br />
+
     <!-- opportunities section -->
 
     <div class="opportunities">
@@ -92,6 +99,7 @@
     </div>
 
     <!-- verified section -->
+
     <br /><br /><br />
 
     <div class="verified">
@@ -112,6 +120,7 @@
     </div>
 
     <br /><br /><br />
+
     <!-- AI section -->
 
     <div class="ai">
@@ -127,6 +136,7 @@
       <div class="clearfix"></div>
     </div>
     <br /><br /><br />
+
     <!-- about section -->
 
     <div class="about">
